<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_contact_supplier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/ic_baseline_call_24" />
    <ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".DetailsActivity"
    android:layout_marginTop="5dp"
    android:orientation="vertical"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/image_product"
                style="@style/ImageProductStyle"
                android:src="@drawable/ic_baseline_image_24"
                app:shapeAppearanceOverlay="@style/cornerCurve20Percent"
                />

            <Button
                android:id="@+id/button_add_product_photo"
                style="@style/AddProductPhotoButtonStyle"
                android:text="@string/photo_btn_add" />
        </RelativeLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center_vertical"
            >
            <EditText
                android:id="@+id/edit_item_name"
                style="@style/EditorFieldStyle"
                android:layout_marginLeft="0dp"
                android:textAppearance="?android:textAppearanceLarge"
                android:hint="@string/hint_item_name"
                android:maxLines="1"
                android:inputType="text"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <TextView
                    android:text="@string/category_price"
                    style="@style/CategoryStyle"
                    />
                <EditText
                    android:id="@+id/edit_product_price"
                    style="@style/EditorFieldStyle"
                    android:layout_width="wrap_content"
                    android:ems="5"
                    android:inputType="number"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_vertical"
                >
                <TextView
                    style="@style/CategoryStyle"
                    android:text="@string/category_quantity"
                    />
                <ImageButton
                    android:id="@+id/button_product_quantity_increment"
                    android:layout_margin="5dp"
                    android:layout_gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_add_24"
                    android:padding="0dp"
                    android:backgroundTint="@color/white"
                    android:textColor="@color/black"
                    app:tint="@color/colorPrimary" />
                <EditText
                    android:id="@+id/edit_product_quantity"
                    style="@style/EditorFieldStyle"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:inputType="number"
                    />
                <ImageButton
                    android:id="@+id/button_product_quantity_decrement"
                    android:layout_margin="5dp"
                    android:layout_gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_horizontal_rule_24"
                    android:padding="0dp"
                    android:backgroundTint="@color/white"
                    android:textColor="@color/black"
                    app:tint="@color/colorPrimary" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <TextView
        style="@style/CategoryStyle"
        android:text="@string/category_description"
        />
    <EditText
        android:id="@+id/edit_product_description"
        style="@style/EditorFieldStyle"
        android:layout_marginLeft="0dp"
        android:layout_height="100dp"
        android:hint="@string/hint_description"
        android:inputType="textMultiLine"
        />
    <TextView
        style="@style/CategoryStyle"
        android:textSize="18sp"
        android:text="@string/supplier_contact_heading"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_supplier_phone"
            />
        <EditText
            android:id="@+id/edit_supplier_phone"
            style="@style/EditorFieldStyle"
            android:hint="@string/hint_supplier_phone"
            android:inputType="phone"
            android:ems="7"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_supplier_email"
            />
        <EditText
            android:id="@+id/edit_supplier_email"
            style="@style/EditorFieldStyle"
            android:hint="@string/hint_supplier_email"
            android:inputType="textEmailAddress"
            android:ems="10"
            />
    </LinearLayout>
</LinearLayout>
</ScrollView>
</RelativeLayout>
